--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   sembast: ^3.2.0
   get:
   path:
-  google_nav_bar: ^3.0.1
+  google_nav_bar:
   google_fonts:
   carousel_slider: ^4.0.0
+  equatable: ^2.0.3
 
   flutter_datetime_picker:
     git:
